Adjust docker settings